20101216 ChangeLog,README,configure.in,man/fuse.1: update for 1.0.0 release.
20101217 keysyms.pl: fix SVGAlib compilation (rkd77).
20101227 man/fuse.1: fix typo (Fred).
20101227 man/fuse.1,sound.c,ui/options.dat: new speaker type for unfiltered
         sound output (Alberto Garcia).
20101227 hacking/tc2048_tech_notes.txt: a couple of minor corrections (Fred).
20101229 disk/{beta.c,opus.c,plusd.c},if1.c,if2.c: handle missing peripheral
         ROM files (patch #3147415) (Alberto Garcia).
20101229 debugger/breakpoint.c: don't free temporary breakpoint until after we
         have run it (fixes bug #3084862) (thanks, Chris Cowley) (Fred).
20101230 debugger/breakpoint.c: stop evaluating breakpoints when we have hit a
         temporary breakpoint (really fixes bug #3084862) (patch #3142840)
         (Sergio Baldovi).
20101231 AUTHORS,Makefile.am,compat.h,compat/{amiga,morphos,unix,wii,
         win32}/Makefile.am,compat/unix/tuntap.c,configure.in,fuse.c,menu.c,
         man/fuse.1,menu_data.dat,nic/{Makefile.am,enc28j60.[ch]},periph.[ch],
         settings.{dat,pl},speccyboot.[ch],roms/speccyboot-1.4.rom,ui/options.dat:
         SpeccyBoot emulation (patch #2906047) (Patrik Persson).
20110101 debugger/breakpoint.c: evaluate all breakpoints again, but store the
         next breakpoint before deleteing the current one from the list 
         (really really fixes bug #3084862) (thanks, Phil) (Fred).
20110101 roms/Makefile.am: ensure SpeccyBoot ROM is installed.
20110101 machines/{pentagon1024.c,pentagon512.c,pentagon.c,scorpion.c,
         spec128.c,spec16.c,spec48.c,spec48_ntsc.c,specplus2a.c,specplus2.c,
         specplus3.c,specplus3e.c,spec_se.c,tc2068.c,ts2068.c},speccyboot.c:
         make SpeccyBoot honour PERIPH_PRESENT_NEVER etc.
20110104 periph.c: make Fuller box and Melodik register the same way as
         everything else (fixes bug #3084862) (thanks, Phil) (Fred).
20110104 nic: add .deps and Makefile to the ignore property (Fred).